Update project description and enhance mobile layout support in main.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "qr_app"
 version = "0.1.0"
-description = ""
+description = "A QR code generator app"
 readme = "README.md"
 requires-python = ">=3.9"
 authors = [
